disable init and config. limit env overwrite.
